# rbp-nanobot-bio

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  INSTALL.md  MANIFEST.in  README.md  README.zh.md  RELEASE.md  VENDOR.md  cli.py  docker-compose.yml  environment.yml  integrate.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: README.md  README.zh.md  __init__.py  __main__.py  agent.py  cli.py  dotenv_util.py  integrate.py  runtime_nanobot.py  sot.py  sync_overlay.py
app/acceptance/: README.md  __init__.py  compliance.py  layout.py  own_head.py
app/backends/: README.md  README.zh.md
app/backends/delivery/: README.md  README.zh.md  __init__.py  client.py  env.py  examples.py  mapping.yaml  mmseqs_wrap.sh  registry.py  stage_tools.py
app/backends/rna_fm/: __init__.py  client.py  policy.py  worker_embed.py
app/cli/: __init__.py  __main__.py  accept.py  common.py  eval_cmds.py  maint.py  parser.py  user.py
app/core/: README.md  README.zh.md  __init__.py  chat_ux.py  chat_viewport.py  disk_budget.py  model_registry.py  onboard.py  paths.py  runtime_config.py  verdict_schema.py
app/dev/: README.zh.md  __init__.py  chat_ten_round_battery.py  gate.py  layout.py  mvp.py
app/workspace/: AGENTS.md  README.md  README.zh.md  sessions
app/workspace/skills/rbp-agent/: DO_NOT_EDIT.md  SKILL.md
backends/delivery/: client.py  env.py  examples.py  mapping.yaml  registry.py
config/: README.md  README.zh.md  defaults.yaml  delivery.paths.example.yaml  evolved.candidate.yaml.example  evolved.yaml  nanobot.config.example.json
core/: __init__.py  chat_ux.py  onboard.py  verdict_schema.py
docs/: delivery要求.zh.md  proposal.md  proposal.zh.md  remediation-checklist.md  工程指南.zh.md  整改清单.zh.md
docs/worklog/: 2026-07-23-cli-frontend-hotfix.md  2026-07-23.md
nanobot/: README.md  README.zh.md  Untitled  __init__.py  pyproject.toml
nanobot/agent/tools/: loader.py
nanobot/agent/tools/rbp/: README.md  README.zh.md  __init__.py  annotation.py  catalogue.py  commit_proxies.py  common.py  evolve_tools.py  near_known.py  phmmer.py  predict.py  register.py  rna_similarity.py  seq.py  stage_contract.py  structure.py  turn_guards.py
nanobot/providers/: openai_compat_provider.py
nanobot/skills/rbp-agent/: SKILL.md
nanobot/skills/rbp-agent/references/: stages.md  verdict.md
nanobot/utils/: __init__.py
plugin/nanobot/skills/rbp-agent/: SKILL.md
rbp_agent/: README.md  README.zh.md  __init__.py  __main__.py  cli.py  dotenv_util.py  integrate.py  sot.py  sync_overlay.py
rbp_agent/acceptance/: README.md  README.zh.md  compliance.py  gate.py  layout.py  mvp.py  own_head.py
rbp_agent/backends/: README.md  README.zh.md  __init__.py
rbp_agent/backends/delivery/: README.md  README.zh.md  call_tool.py  client.py  env.py  examples.py  mapping.yaml  registry.py  stage_tools.py
rbp_agent/backends/rna_fm/: __init__.py  client.py
rbp_agent/core/: README.md  README.zh.md  __init__.py  chat_ux.py  model_registry.py  onboard.py  paths.py  runtime_config.py  verdict_schema.py
rbp_eval/: README.md  README.zh.md  __init__.py  __main__.py  accept_llm.py  evaluation_plan.py  evaluator.py  evolve_eval.py  fuse_hits.py  fusion.py  gap_closure.py  heavy_loo.py  hooks.py  loo_eval.py  metrics.py  nanobot_hooks.py  own_head.py  proxy_cache.py  rna_fm_gate.py  runner.py  trace_schema.py  traces
schemas/: tool_schemas_locked.json
scripts/: README.md  README.zh.md  activate_env.sh  bootstrap_data.sh  check_proposal_62_layout.py  check_secrets.sh  ci_gate.sh  compliance_check.py  docker-entrypoint.sh  ensure_nanobot_runtime.sh  install_rbp_into_nanobot.py  install_rbp_into_nanobot.sh  mvp_accept.py  own_head_accept.py  run_example_linux.sh  run_proposal_linux.sh  setup_af3_accelerated.sh  setup_all.sh
tests/: README.md  README.zh.md  conftest.py  test_agent_patterns.py  test_caveats_audit.py  test_chat_ux.py  test_device_and_onboard.py  test_eval_metrics.py  test_evaluation_plan_metrics.py  test_evolve_eval.py  test_gate_report_schema.py  test_mapping_sync.py  test_model_boundary.py  test_own_head_path.py  test_promote_evolved.py  test_proposal_compliance.py  test_rna_similarity.py  test_section4_fidelity.py  test_self_evolution.py  test_skeleton_imports.py  test_softfail_caveats.py  test_stage_contract.py  test_structure_file_input.py  test_turn_guards.py  test_verdict_unwrap.py
workspace/: AGENTS.md  README.md  README.zh.md
workspace/.nanobot/tool-results/case-aatf_q9ny61-1784292221/: call_00_FE74kNzt5V3yWcX5AzXh5977.txt  call_00_xo5Fbn2No2Pyju5h1mys1423.txt
workspace/.nanobot/tool-results/case-elavl1_pos-1784292104/: call_00_vMfiQDeD4pVZ654QlKqf1336.txt
workspace/.nanobot/tool-results/case-ptbp1_pos-1784291924/: call_00_0m9kOvH9pm2XY5m6tU8i7168.txt  call_00_7u291q9Kma12d73ZwRyX7331.txt
workspace/.nanobot/tool-results/case2-aatf-1784292589/: call_01_kaH2PDcy8cxaWX4RfL016148.txt
workspace/.nanobot/tool-results/case2-aatf-1784292786/: call_01_fz9Qh3wufwqwdxCqx6tX4287.txt
workspace/.nanobot/tool-results/case2-aatf-1784293029/: call_01_tJC3Jtv29fJsEUmBEAZQ8687.txt
workspace/.nanobot/tool-results/case2-aatf-1784293286/: call_01_Rn4beN4cNI1U8UpjPNOF9852.txt
workspace/.nanobot/tool-results/case2-elavl1-1784292494/: call_01_yjNNkO73HCqrhqGMWAmy9712.txt
workspace/.nanobot/tool-results/case2-elavl1-1784292644/: call_01_yPwDJOg5cXsALS38ZiXC3565.txt
workspace/.nanobot/tool-results/case2-elavl1-1784292879/: call_01_8PgKvEAhftSRjg6f8aoO8452.txt
workspace/.nanobot/tool-results/case2-elavl1-1784293151/: call_00_w9wBRqpsF7952SjLUCDC8124.txt  call_01_7kjGcmCYCel1WhxODMoc4039.txt
workspace/.nanobot/tool-results/chat-10801-1784299036/: call_00_ggbg46u6cxXqdoronSfs0838.txt
workspace/.nanobot/tool-results/chat-4377/: call_00_jQZfk2vPCMAugqjLvAuM2746.txt  call_01_nRAYUCq8uJqj4wSuv7rm7267.txt
workspace/.nanobot/tool-results/chat-4440/: call_01_kfUQGK0ZdfmMEJTHa9ea3021.txt
workspace/.nanobot/tool-results/chat-5340/: call_00_LYvJS7lWxmfAH4Y8tAY46007.txt  (+3 more)
workspace/skills/rbp-agent/: DO_NOT_EDIT.md  SKILL.md  references
(+41 files in other folders)
