[project]
name = "nanobot-bio"
version = "0.4.0"
description = "RBP Agent App: nanobot-bio CLI + plugin SoT + delivery bridge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "numpy>=1.24",
  "loguru>=0.7",
  "typer>=0.12",
  "rich>=13",
  "questionary>=2",
  "prompt_toolkit>=3.0",
  "openai>=1.0",
  "dulwich>=0.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.6",
]

[project.scripts]
nanobot-bio = "app.cli:main"
rbp-agent = "app.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Product packages. Plugin SoT is plugin/nanobot/ (synced into $NANOBOT_SRC).
[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "rbp_eval*"]

[tool.setuptools.package-data]
app = ["backends/delivery/*.yaml", "backends/delivery/*.yml", "backends/delivery/*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
  "--cov=app",
  "--cov=rbp_eval",
  "--cov-report=term-missing",
  "--cov-fail-under=30",
]

[tool.coverage.run]
omit = [
  "*/tests/*",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  ".venv",
  "artifacts",
  "workspace",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
ignore = []
