[project]
name = "nanobot-bio"
version = "0.5.0"
description = "RBP Agent App: nanobot-bio CLI + nanobot SoT + delivery bridge"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "JoeSun-421", email = "noreply@users.noreply.github.com" },
]
keywords = ["rna", "rbp", "agent", "nanobot", "bioinformatics", "rhobind"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "numpy>=1.24",
  "loguru>=0.7",
  "typer>=0.12",
  "rich>=13",
  "questionary>=2",
  "prompt_toolkit>=3.0",
  "openai>=1.0",
  "dulwich>=0.21",
]

[project.urls]
Homepage = "https://github.com/JoeSun-421/rbp-nanobot-bio"
Repository = "https://github.com/JoeSun-421/rbp-nanobot-bio"
Changelog = "https://github.com/JoeSun-421/rbp-nanobot-bio/blob/main/CHANGELOG.md"
Issues = "https://github.com/JoeSun-421/rbp-nanobot-bio/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.6",
]
af3 = [
  # AF3 harden pins (install only if you build the af3 conda env). See INSTALL.md.
  "jax>=0.4",
  "triton>=2.0",
]
science = [
  # Convenience extra pulling the app-side pins needed when driving the
  # delivery science stack from the same venv (rare; prefer conda envs).
  "numpy>=1.24",
  "pyyaml>=6.0",
]

[project.scripts]
nanobot-bio = "app.cli:main"
rbp-agent = "app.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Product packages. Toolkit SoT is repo-root nanobot/ (Proposal §6.2; synced into $NANOBOT_SRC).
# Do not install overlay nanobot/ as a Python package (would shadow the framework).
[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "rbp_eval*"]

[tool.setuptools.package-data]
app = ["backends/delivery/*.yaml", "backends/delivery/*.yml", "backends/delivery/*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
  "--cov=app",
  "--cov=rbp_eval",
  "--cov-report=term-missing",
  "--cov-fail-under=30",
]

[tool.coverage.run]
omit = [
  "*/tests/*",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  ".venv",
  "artifacts",
  "workspace",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
ignore = []
